Fix alignment of active route content

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   background-color: #1A1B1E;
   color: #d9d9d9;
 
+  display: flex;
+  flex-direction: row;
   height: 100vh;
   text-align: center;
+}
+
+.page {
+  float: right;
+  width: calc(100% - 300px);
+  height: 100vh;
 }
